Fixed DocumentDataController